@@ -36,10 +36,8 @@ cmdCallback crouterCMD_RIP_OSPF_redistrib(char* args);
 cmdCallback crouterCMD_RIP_OSPF_noredistrib(char* args);
 cmdCallback crouterCMD_RIP_defaultinformation(char* args);
 cmdCallback crouterCMD_RIP_nodefaultinformation(char* args);
-cmdCallback crouterCMD_RIP_passive(char* args);
-cmdCallback crouterCMD_RIP_nopassive(char* args);
-cmdCallback crouterCMD_RIP_cost(char* args);
-cmdCallback crouterCMD_RIP_nocost(char* args);
+cmdCallback crouterCMD_RIP_OSPF_passive(char* args);
+cmdCallback crouterCMD_RIP_OSPF_nopassive(char* args);
 cmdCallback crouterCMD_RIP_timer(char* args);
 cmdCallback crouterCMD_RIP_notimer(char* args);
 cmdCallback crouterCMD_RIP_splithorizon(char* _none);
